tests/error/func_unknown_ret.gw
#! [contains] unknown type
fun unknwon_type my_function(){}
